<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeOn</string>
    <string name="string_test">-This is only a test-</string>
    <string name="Welcome_message_content">Welcome to TimeOn!</string>
    <string name="Welcome_name_test">What is your name?</string>
    <string name="Welcome_button_content">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_display_timer_test">DisplayTimerTestActivity</string>
    <string name="timer_on_test">Timer on!</string>
    <string name="start_the_timer">Start the timer</string>
    <string name="insert_current_time">Insert Time Test</string>
    <string name="title_activity_display_current_time">DisplayCurrentTimeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="update_time">Update Time</string>
    <string name="title_activity_display_about">About</string>

</resources>
