<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_test"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <EditText android:id="@+id/edit_name_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:singleLine="true"
        android:hint="@string/Welcome_name_test"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Welcome_message_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/Button_name_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="okMessage"
        android:text="@string/Welcome_button_content"
        android:layout_alignTop="@+id/edit_name_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/edit_name_message"
        android:layout_alignParentStart="false" />

    <TextView
        android:id="@+id/Time_now"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/string_test"
        android:layout_alignWithParentIfMissing="false"
        android:gravity="center_horizontal"
        android:layout_above="@+id/Button_update_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateTimeText"
        android:text="@string/update_time"
        android:id="@+id/Button_update_time"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="insertCurrentTimeText"
        android:text="@string/insert_current_time"
        android:id="@+id/button"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/Button_name_enter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
